ch12/k8s/basic/tomcat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  labels:
    app: mytomcat
spec:
  containers:
  - name: tomcat
    image: tomcat:8
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
