ch12/k8s/basic/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  labels:
    app: mytomcat
spec:
  type: NodePort
  ports:
    - port: 30000
      nodePort: 30000
      targetPort: 8080
  selector:
    app: mytomcat
